# oac

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AUTHORS.txt  AUTHORS.yaml  CONTRIBUTING.md  CREDITS.toml  CREDITS.yml  HACKING.md  LICENSE.txt  MANIFESTO.txt  README.md  TODO.md  ZEN.txt  install-vscode-extension.sh  notes.md  ousia-demo.oa  rustfmt.toml
compiler/: CMakeLists.txt  Cargo.toml  build.rs  install.py
compiler/include/: main.hpp  scanner.hpp  version.hpp.in
compiler/include/feedback/: feedback.h
compiler/include/os/: diagnostics.hpp
compiler/include/repl/: repl.h
compiler/include/utils/: ansi.h  diagnostics.h  tree.h
compiler/resources/: unknown_command.txt  usage.txt
compiler/src/: addpath.cpp  build_script.rs  feedback.cpp  feedback_to_message.py  help.cpp  hub.rs  install.cpp  main.cpp  network.cpp  repl.c  repl.cpp  scanner.c  scanner.cpp  suggestions.cpp  symspell.cpp  version.cpp
compiler/src/core/parser/: parser.rs
compiler/src/ides/: ides.cpp
compiler/src/langserver/lsp/: client.rs  telemetry.rs  workspace.rs
compiler/src/schemas/: command_descriptions.fbs  directory.fbs  symspell.fbs
compiler/src/utils/: path.cpp  tree.c
compiler/test/: path.cpp
compiler/test/repl/: repl.cpp
compiler/test/utils/: tree.cpp
crates/oac/: Cargo.toml  string_struct.oa
crates/oac/bench/: prove_baseline.json
crates/oac/execution_tests/: assert_fail.oa  assert_pass.oa  basic_struct_and_field_access.oa  comptime_expr_meta_assert_message.oa  comptime_ignored_output.oa  comptime_purity_violation.oa  comptime_transform_invalid_target.oa  comptime_transform_struct_invariant_noop.oa  comptime_transform_struct_invariant_pass.oa  double_function_definition.oa  enum_basic.oa  enum_ctor_invalid_arity.oa  enum_ctor_wrong_payload_type.oa  enum_invalid_variant.oa  enum_match_duplicate_arm.oa  enum_match_non_exhaustive.oa  enum_match_payload_mismatch.oa  enum_param_return.oa  enum_payload_ctor_match.oa  enum_payload_nested_match.oa  enum_payload_variant_without_call.oa  fibonacci.oa  fibonacci_symbolic.oa  generic_hash_table_custom_key.oa  generic_hash_table_missing_impl.oa  hello_world.oa  if.oa  integer_i32_add_overflow_fail.oa  integer_i32_div_min_neg_one_fail.oa  integer_i32_div_zero_fail.oa  integer_i32_mul_overflow_fail.oa  integer_i32_safe_pass.oa  integer_i32_sub_underflow_fail.oa  integer_ptrint_overflow_fail.oa  integer_u8_add_overflow_fail.oa  integer_u8_safe_pass.oa  json_document.oa  json_parser.oa  json_scan_utils.oa  json_value_parser.oa  (+55 more)
crates/oac/formatter_invalid_tests/: invalid_token.oa
crates/oac/formatter_tests/: comments_and_blank_lines.oa  declaration_blocks.oa  enum_brace_gap.oa  function_preconditions.oa  struct_literals_and_match.oa  top_level_control_flow.oa
crates/oac/src/: ast_paths.rs  ast_walk.rs  bench_prove.rs  builtins.rs  cli_output.rs  codegen_runtime.rs  comptime.rs  diagnostics.rs  flat_imports.rs  formatter.rs  function_preconditions.rs  integer_safety.rs  invariant_metadata.rs  ir.rs  libc_type_signatures.json  llvm_backend.rs  lsp.rs  main.rs  model_invariants.rs  parser.rs  precondition_metadata.rs  prove.rs  qbe_backend.rs  resolver.rs  riscv_smt.rs  runtime_layout.rs  scanner.rs  source_span.rs  std.oa  std_ascii.oa  std_clib.oa  std_collections.oa  std_json.oa  std_newstring.oa  std_null.oa  struct_invariants.rs  symbol_keys.rs  test_framework.rs  tokenizer.rs  verification.rs  (+6 more)
crates/oac/src/snapshots/: oac__formatter__tests__formatter_tests__comments_and_blank_lines.oa.snap  oac__formatter__tests__formatter_tests__declaration_blocks.oa.snap  oac__formatter__tests__formatter_tests__enum_brace_gap.oa.snap  oac__formatter__tests__formatter_tests__function_preconditions.oa.snap  oac__formatter__tests__formatter_tests__struct_literals_and_match.oa.snap  oac__formatter__tests__formatter_tests__top_level_control_flow.oa.snap  oac__parser__tests__parser_char_literals_ast.snap  oac__parser__tests__parser_float_literals_ast.snap  oac__parser__tests__parser_function_preconditions_ast.snap  oac__qbe_backend__tests__execution_tests__assert_fail.oa.snap  oac__qbe_backend__tests__execution_tests__basic_struct_and_field_access.oa.snap  oac__qbe_backend__tests__execution_tests__comptime_expr_meta_assert_message.oa.snap  oac__qbe_backend__tests__execution_tests__comptime_purity_violation.oa.snap  oac__qbe_backend__tests__execution_tests__comptime_transform_invalid_target.oa.snap  oac__qbe_backend__tests__execution_tests__comptime_transform_struct_invariant_pass.oa.snap  oac__qbe_backend__tests__execution_tests__double_function_definition.oa.snap  oac__qbe_backend__tests__execution_tests__enum_basic.oa.snap  oac__qbe_backend__tests__execution_tests__enum_ctor_invalid_arity.oa.snap  oac__qbe_backend__tests__execution_tests__enum_ctor_wrong_payload_type.oa.snap  oac__qbe_backend__tests__execution_tests__enum_invalid_variant.oa.snap  oac__qbe_backend__tests__execution_tests__enum_match_duplicate_arm.oa.snap  oac__qbe_backend__tests__execution_tests__enum_match_non_exhaustive.oa.snap  oac__qbe_backend__tests__execution_tests__enum_match_payload_mismatch.oa.snap  oac__qbe_backend__tests__execution_tests__enum_payload_ctor_match.oa.snap  oac__qbe_backend__tests__execution_tests__enum_payload_nested_match.oa.snap  oac__qbe_backend__tests__execution_tests__enum_payload_variant_without_call.oa.snap  oac__qbe_backend__tests__execution_tests__if.oa.snap  (+83 more)
crates/oac/tokenizer_tests/: arithmetics.oa  char_literals.oa  float_literals.oa
ousiac/: CMakeLists.txt  install.py
ousiac/include/: install.h  main.h  scanner.h  stack.h  tree.h
ousiac/include/cmd/: repl.h  version.h.in
ousiac/include/utils/: diagnostics.h
ousiac/lib/catch2/: catch2.hpp
ousiac/resources/: bug-report-template.txt
ousiac/resources/help/: help.txt
ousiac/src/: install.c  main.c  repl.c  scanner.c  stack.c  tree.c
ousiac/src/cmd/: cmd_help.c  cmd_version.c  help.c  repl.c  version.c
ousiac/src/flatbuf/: tree.fbs
ousiac/src/schemas/: tree.fbs
ousiac/src/utils/: diagnostics.c
ousiac/test/: stack.cpp  test.h  tree.cpp
(+354 files in other folders)
