[package]
name = "ousia"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[dependencies]
bincode = "1.0.0"
blake2 = "0.7.0"
chrono = "0.4.2"
clap = { version = "2.31.2", features = [] }
colored = "1.6.0"
digest = { version = "0.7", features = ["std"]}
exitcode = "1"
hlua = "0.3"
indexmap = "1.0.0"
lazy_static = "1.0.0"
notify = "4.0.3"
num_cpus = "1.8.0"
rayon = "1.0.1"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
stopwatch = "0.0.7"
termion = "1.5.1"
textwrap = { version = "0.9", features = ["term_size"] }
toml = "0.4"
url = "1.7.0"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
semver = "0.9"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
