[package]
name = "oac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
qbe = { path = "../qbe-rs" }
qbe-smt = { path = "../qbe-smt" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v7"] }
url = "2"

# Dependencies for RISC-V ELF to SMT conversion
goblin = "0.8" # ELF parsing

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
